--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   firebase_core: ^1.0.2
   firebase_auth: ^1.0.1
   cloud_firestore: ^1.0.2
+  google_fonts: ^2.0.0
+  provider: ^5.0.0
+  scroll_snap_list: ^0.7.0
 
 dev_dependencies:
   flutter_test:
