--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   cloud_firestore: ^1.0.2
   google_fonts: ^2.0.0
   provider: ^5.0.0
-  scroll_snap_list: ^0.7.0
+  auto_size_text: ^3.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
