--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_fonts: ^2.0.0
   provider: ^5.0.0
   auto_size_text: ^3.0.0-nullsafety.0
+  extended_image: ^4.0.1
 
 dev_dependencies:
   flutter_test:
