--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^5.0.0
   auto_size_text: ^3.0.0-nullsafety.0
   extended_image: ^4.0.1
+  fluttertoast: ^8.0.3
 
 dev_dependencies:
   flutter_test:
