--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.burakaydin.stok_app">
+
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="stok_app"
+        android:label="Stok Yönetimi"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
