--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   auto_size_text: ^3.0.0-nullsafety.0
   extended_image: ^4.0.1
   fluttertoast: ^8.0.3
+  date_field: ^2.0.1
+  intl: ^0.17.0
+
+
 
 dev_dependencies:
   flutter_test:
